# bitsors

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  perf.data
.github/workflows/: ci.yml
examples/: account_balance.rs  account_status.rs  available_books.rs  bank_codes.rs  cancel_order.rs  crypto_withdrawal.rs  debit_card_withdrawal.rs  fees.rs  funding_destination.rs  fundings.rs  ledger.rs  lookup_orders.rs  open_orders.rs  order_book.rs  order_trades.rs  phone_withdrawal.rs  place_order.rs  spei_withdrawal.rs  ticker.rs  trades.rs  user_trades.rs  websocket.rs  withdrawals.rs
src/: auth.rs  client.rs  lib.rs  util.rs  websocket.rs
src/model/: mod.rs  private.rs  public.rs  websocket.rs
tests/: test_auth.rs  test_client.rs  test_private_api.rs  test_public_api.rs  test_websocket.rs
