[package]
name = "bitsors"
version = "0.1.1"
license = "MIT"
readme = "README.md"
description = "A Rust wrapper for the Bitso API"
homepage = "https://github.com/arturomf94/bitsors/"
keywords = ["bitso", "api", "cryptocurrencies"]
authors = ["arturo <arturomf94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
lazy_static = "1.0"
dotenv = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
hex = "0.4.2"
openssl = "0.10.30"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
mockito = "0.26.0"
