[package]
name = "bitsors"
version = "0.1.1"
license = "MIT"
readme = "README.md"
description = "A Rust wrapper for the Bitso API"
homepage = "https://github.com/arturomf94/bitsors/"
keywords = ["bitso", "api", "cryptocurrencies"]
authors = ["arturo <arturomf94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.61"
anyhow = "1.0.37"
hex = "0.4.2"
openssl = "0.10.32"
tungstenite = "0.13.0"
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["full"] }
mockito = "0.28.0"
